--- a/index.htm
+++ b/index.htm
@@ -14,8 +14,8 @@
 
 <p>
 <a href="./Lab1/Lab1.htm">Lab #1</a>
-<br><a href="./Lab2/lab2.htm">Lab #2</a>
-<br><a href="./Assign1/assign1.htm">Assignment #1</a>
+<br><a href="./Lab2/Lab2.htm">Lab #2</a>
+<br><a href="./Assign1/Assign1.htm">Assignment #1</a>
 <br><a href="./OnlineSession1/onlinesession1home.htm">Online Session #1</a>
 </p>
 </body>
