--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,7 @@
 <br><a href="./Lab2/Lab2.htm">Lab #2</a>
 <br><a href="./Assign1/Assign1.htm">Assignment #1</a>
 <br><a href="./OnlineSession1/onlinesession1home.htm">Online Session #1</a>
-<br><a href="www.airClickr.com">Check out airClickr! An app I built with a friend for a programming contest</a>
+<br><a href="https://www.airClickr.com">Check out airClickr! An app I built with a friend for a programming contest</a>
 </p>
 </body>
 
